--- a/client/closet-app/package.json
+++ b/client/closet-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "crypto-browserify": "^3.12.0",
     "mongoose": "^7.4.2",
     "path-browserify": "^1.0.1",
@@ -45,6 +46,4 @@
   "devDependencies": {
     "react-app-rewired": "^2.2.1"
   }
-  
-  
 }
