--- a/client/closet-app/package.json
+++ b/client/closet-app/package.json
@@ -8,8 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
+    "multer": "^1.4.5-lts.1",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,7 +21,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
