--- a/client/closet-app/package.json
+++ b/client/closet-app/package.json
@@ -11,9 +11,11 @@
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
+    "password-validator": "^5.3.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4",
     "zlib": "^1.0.5"
   },
