--- a/client/closet-app/.env.local
+++ b/client/closet-app/.env.local
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://admin:0123456789@cluster0.rablf5o.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://admin:0123456789@cluster0.rablf5o.mongodb.net/closet-app?retryWrites=true&w=majority
 
 MONGODB_DB=closet-app
