--- a/client/closet-app/package.json
+++ b/client/closet-app/package.json
@@ -10,6 +10,7 @@
     "aws-sdk": "^2.1437.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
