--- a/client/closet-app/fly.toml
+++ b/client/closet-app/fly.toml
@@ -1,17 +1,24 @@
-# fly.toml app configuration file generated for closet-app-fly on 2023-08-25T12:31:15-04:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
+# fly.toml app configuration file for deploying a Node.js backend
+# Adjust the settings as needed for your backend application
 
-app = "closet-app-fly"
-primary_region = "den"
+app = "closet-app"
+primary_region = "mia"
 
-[build]
+[env]
+  MONGODB_URI = "mongodb+srv://admin:0123456789@cluster0.rablf5o.mongodb.net/closet-app?retryWrites=true&w=majority"
 
-[http_service]
+  MONGODB_DB = "closet-app"
+
+  ACCESS_TOKEN_SECRET = "ladybug-soccer"
+
+  AWS_ACCESS_KEY_ID = "AKIAUOIQRDQKC2PN43P3"
+
+  AWS_SECRET_ACCESS_KEY = "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"
+
+[service]
   internal_port = 3000
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ["app"]
+
+[experimental]
+  # Specify the command to start your Node.js server
+  command = "node server.js"
+  machine = "c-2x"
