--- a/client/closet-app/fly.toml
+++ b/client/closet-app/fly.toml
@@ -15,3 +15,6 @@ primary_region = "dfw"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[experimental]
+  command = "node server.js"
