--- a/client/closet-app/package.json
+++ b/client/closet-app/package.json
@@ -57,7 +57,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11",
+    "@babel/core": "7.22.11",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@flydotio/dockerfile": "^0.4.8",
