--- a/client/closet-app/fly.toml
+++ b/client/closet-app/fly.toml
@@ -14,7 +14,7 @@ primary_region = "dfw"
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["api"]
+  processes = ["app"]
 
 [experimental]
   command = "node server.js"
