--- a/client/closet-app/fly.toml
+++ b/client/closet-app/fly.toml
@@ -6,7 +6,12 @@
 app = "closet-app-backend"
 primary_region = "dfw"
 
-[build]
+[env]
+    MONGODB_URI = "mongodb+srv://admin:0123456789@cluster0.rablf5o.mongodb.net/closet-app?retryWrites=true&w=majority"
+    MONGODB_DB = "closet-app"
+    ACCESS_TOKEN_SECRET = "ladybug-soccer"
+    AWS_ACCESS_KEY_ID = "AKIAUOIQRDQKC2PN43P3"
+    AWS_SECRET_ACCESS_KEY = "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"
 
 [http_service]
   internal_port = 3000
