--- a/client/closet-app/vercel.json
+++ b/client/closet-app/vercel.json
@@ -1,13 +1,13 @@
 {
     "routes": [
-        { "src": "/api/(.*)", "dest": "server.js" },
-        { "src": "/images/(.*)", "dest": "server.js" },
-        { "src": "/upload/(.*)", "dest": "server.js" },
-        { "src": "/register/(.*)", "dest": "server.js" },
-        { "src": "/login/(.*)", "dest": "server.js" },
-        { "src": "/logout/(.*)", "dest": "server.js" },
-        { "src": "/loginAnonymous/(.*)", "dest": "server.js" },
-        { "src": "/current/(.*)", "dest": "server.js" },
+        { "src": "/api/(.*)", "dest": "routes.js" },
+        { "src": "/images/(.*)", "dest": "routes.js" },
+        { "src": "/upload/(.*)", "dest": "routes.js" },
+        { "src": "/register/(.*)", "dest": "routes.js" },
+        { "src": "/login/(.*)", "dest": "routes.js" },
+        { "src": "/logout/(.*)", "dest": "routes.js" },
+        { "src": "/loginAnonymous/(.*)", "dest": "routes.js" },
+        { "src": "/current/(.*)", "dest": "routes.js" },
         { "src": "/static/(.*)", "dest": "static/$1" },
         { "src": "/(.*)", "dest": "index.html" }
     ]
