--- a/client/closet-app/src/vercel.json
+++ b/client/closet-app/src/vercel.json
@@ -1,5 +1,5 @@
 {
-    "routes": [
+    "rewrites": [
         { 
             "source": "/api/images/(.*)", 
             "destination": "https://acme.com/api/images" ,
