changed rewrite syntax

--- a/client/closet-app/src/vercel.json
+++ b/client/closet-app/src/vercel.json
@@ -10,15 +10,11 @@
           ]
         }
       ],
-    "rewrites": [
-        { 
-            "source": "/api/(.*)", 
-            "destination": "https://closet-app-backend.fly.dev/api/$1" 
-        },
-        { 
-            "source": "/(.*)", 
-            "destination": "/$1" 
+      "rewrites": [
+        {
+          "source": "/api/:path*",
+          "destination": "https://closet-app-backend.fly.dev/api/:path*"
         }
-    ]
+      ]
 }
   
