--- a/client/closet-app/package.json
+++ b/client/closet-app/package.json
@@ -1,6 +1,9 @@
 {
   "name": "closet-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "18.16.1"
+  },
   "private": true,
   "dependencies": {
     "@babel/core": "^7.22.11",
@@ -26,6 +29,7 @@
     "mongoose": "^7.4.3",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "nginx": "^1.0.8",
     "nodemon": "^3.0.1",
     "password-validator": "^5.3.0",
     "path-browserify": "^1.0.1",
