--- a/client/closet-app/package.json
+++ b/client/closet-app/package.json
@@ -72,5 +72,9 @@
   "main": "config-overrides.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.89.0",
+    "webpack-manifest": "^1.0.8"
+  }
 }
